# SyntheticTrialData

./: LICENSE  README.md  pyproject.toml  train.py  train_static_only.py
config/: config.yaml  config_static_only.yaml
config/auditor/sequential/: auditor.yaml
config/auditor/static/: auditor.yaml
config/dataset/: data_schema.yaml
config/vocabulary/: vocab.yaml
synthetic_trial_data/src/datasets/: synthetic_dataset.py
synthetic_trial_data/src/evaluators/: base_evaluator.py  batch_evaluator.py  distance_metrics.py  precision_recall.py  privacy.py  statistical_tests.py  temporal.py  trust_index.py
synthetic_trial_data/src/experiments/: auditor.py  data_split.py  experiment_config.py  feature_engineering.py  load_data.py  model_handling.py  postprocessing.py  preprocessing.py  sample.py
synthetic_trial_data/src/load_and_merge/: data_loader.py  data_merger.py
synthetic_trial_data/src/metrics/: correlation_difference.py  domiasMIA.py  fid.py  fid2.py  identification_risk.py  prdc.py  precision_recall.py
synthetic_trial_data/src/metrics/mmd/: kernel_wrapper.py  mmd_3_sample.py  mmd_agg.py  mmd_boot.py
synthetic_trial_data/src/models/: base_model.py
synthetic_trial_data/src/models/GMM/: model.py
synthetic_trial_data/src/models/PARSynthesizer/: utils.py
synthetic_trial_data/src/models/TabFormerGPT/: sample.py  (+6 more)
synthetic_trial_data/src/preprocessing/: base_processor.py  custom_transformers.py  data_sequencing.py  preprocessors.py  tokenization.py
synthetic_trial_data/src/utils/: compare_data.py  dataframe_handling.py  experiments.py  mflow.py  plots.py  reports.py  toy_data.py  trial_data.py
(+4 files in other folders)
